--- a/archives.html
+++ b/archives.html
@@ -112,5 +112,13 @@
       Copyright &copy; 2014 - youngsterxyf -
   <span class="credit">Powered by <a href="http://getpelican.com">Pelican</a></span>
 </p></footer>
+	<script type="text/javascript">
+	  var disqus_shortname = 'happytechgroup';
+	  (function() {
+	    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+	    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	   })();
+	</script>
 </body>
 </html>
