change disqus name

--- a/categories.html
+++ b/categories.html
@@ -91,7 +91,7 @@
   <span class="credit">Powered by <a href="http://getpelican.com">Pelican</a></span>
 </p></footer>
 	<script type="text/javascript">
-	  var disqus_shortname = 'happytg';
+	  var disqus_shortname = 'happytechgroup';
 	  (function() {
 	    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 	    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
