private blog info modified

--- a/pages/members.html
+++ b/pages/members.html
@@ -60,6 +60,7 @@
 </li>
 <li><strong>侯哥</strong>：<ul>
 <li>Github：<a href="https://github.com/simonhou">https://github.com/simonhou</a></li>
+<li>博客：<a href="http://www.cnblogs.com/hackergodness/">http://www.cnblogs.com/hackergodness/</a></li>
 </ul>
 </li>
 <li><strong>爽哥</strong>：<ul>
