--- a/pages/members.html
+++ b/pages/members.html
@@ -83,7 +83,7 @@
 </ul>
 </li>
 <li><strong>华哥</strong>：<ul>
-<li>Github：<a href="https://github.com/humanhuang">https://github.com/humanhuang</a></li>
+<li>Github：<a href="https://github.com/huangjunhua">https://github.com/humanhuang</a></li>
 </ul>
 </li>
 <li><strong>松哥</strong>：<ul>
