--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="./favicon.png" rel="icon">
+  <link href="./favicon.ico" rel="shortcut icon">
   <link href="./theme/css/main.css" media="screen, projection"
         rel="stylesheet" type="text/css">
   <script src="./theme/js/modernizr-2.0.js"></script>
