--- a/pages/members.html
+++ b/pages/members.html
@@ -74,7 +74,7 @@
 </ul>
 </li>
 <li><strong>任哥</strong>：<ul>
-<li>Github：<a href="https://github.com/cherryleer">https://github.com/cherryleer</a></li>
+<li>Github：<a href="https://github.com/cherrylee">https://github.com/cherrylee</a></li>
 <li>博客：<a href="http://cherryleer.com/">http://cherryleer.com/</a></li>
 </ul>
 </li>
