--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="./theme/css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="./favicon.png" rel="icon">
+  <link href="./theme/css/main.css" media="screen, projection"
+        rel="stylesheet" type="text/css">
   <script src="./theme/js/modernizr-2.0.js"></script>
   <script src="./theme/js/ender.js"></script>
   <script src="./theme/js/octopress.js" type="text/javascript"></script>
@@ -56,7 +57,7 @@
 </ul>
 <h4>高性能MySQL</h4>
 <ul>
-<li>镔哥：<a href="http://pan.baidu.com/s/1eQrpNCQ">幻灯片</a></li>
+<li>镔哥：<a href="http://pan.baidu.com/s/1sj1cQtf">幻灯片</a></li>
 </ul>
 <hr />
 <p>聚乐部成立至今已有1年，谢谢大家！</p></div>
